# deepcli

./: .deepignore  .gitignore  AGENTS.md  Cargo.toml  README.md
.deepcli/: config.json
docs/: ARCHITECTURE.md  COMMANDS.md  CORE_FEATURES.md  FEATURES.md  HARNESS.md
docs/ADR/: 0001-harness-first.md  0002-command-surface-pruning.md  0003-schema-id-registry.md
docs/MODULES/: commands.md  permissions.md  runtime.md  session.md  tools.md  ui.md
docs/ai/: CONTEXT.md  HANDOFF.md  HARNESS_REFACTOR_PLAN.md  IMPLEMENTED_FEATURES_REVIEW.md  REQUIREMENTS.md  TECHNICAL_PLAN.md
docs/superpowers/plans/: 2026-07-10-trusted-tool-execution.md  (+1 more)
scripts/: deep_cli  deepcli  native-terminal-smoke  tui-smoke
src/: agents.rs  cli.rs  commands.rs  config.rs  context_manager.rs  lib.rs  main.rs  permissions.rs  privacy.rs  prompts.rs  providers.rs  runtime.rs  schema_ids.rs  session.rs  skills.rs  tools.rs  ui.rs  workspace.rs
src/commands/: action_checklist.rs  agent.rs  approval.rs  benchmark_artifacts.rs  benchmark_baselines.rs  benchmark_dispatch.rs  benchmark_history.rs  benchmark_presets.rs  benchmark_runs.rs  benchmark_status.rs  btw.rs  cmd.rs  command_policy.rs  completion.rs  config.rs  context.rs  credentials.rs  delivery.rs  delivery_diff.rs  delivery_reports.rs  delivery_review.rs  delivery_verify.rs  diagnose.rs  doctor.rs  env.rs  environment_actions.rs  fork.rs  git.rs  git_identity.rs  goal.rs  help.rs  logs.rs  model.rs  opportunities.rs  parser.rs  permissions.rs  plan.rs  preflight.rs  privacy.rs  productloop.rs  (+33 more)
src/tools/: authorization.rs  declarations.rs  environment.rs  file.rs  git.rs  process.rs  schema.rs  test_discovery.rs  validation.rs  web.rs
src/ui/: approvals.rs  chat_history.rs  chat_view.rs  clipboard.rs  command_palette.rs  credential_prompt.rs  dashboard.rs  dialogs.rs  geometry.rs  input_submission.rs  message_box.rs  monitor.rs  monitor_changes.rs  monitor_health.rs  monitor_library.rs  monitor_output.rs  monitor_shell.rs  monitor_tools.rs  native_terminal.rs  paste.rs  quick_actions.rs  resume_picker.rs  running_commands.rs  runtime_lifecycle.rs  scrolling.rs  session_projection.rs  terminal_mode.rs  tests.rs  text.rs  worker.rs
tests/: mvp_contract.rs  wrapper_contract.rs
(+2 files in other folders)
