[package]
name = "deepcli"
version = "0.1.0"
edition = "2021"
description = "Local-first AI coding agent CLI backed by DeepSeek-compatible providers"
license = "MIT"

[lib]
name = "deepcli"
path = "src/lib.rs"

[[bin]]
name = "deepcli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "5.0"
futures-util = "0.3"
globset = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
shell-words = "1.1"
similar = "2.6"
thiserror = "1.0"
tokio = { version = "1.40", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicode-width = "0.2"
uuid = { version = "1.10", features = ["serde", "v4"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.12"
